posiGen_FullsendBox/src/objects/Market_Installation_Step__c.object
<CustomObject>
    <fields>
        <fullName>Business_Market__c</fullName>
        <label>Business Market</label>
        <referenceTo>Business_Market__c</referenceTo>
        <relationshipLabel>Market Installation Steps</relationshipLabel>
        <relationshipName>Market_Installation_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_In_Tracker__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display In Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation_Step__c</fullName>
        <label>Installation Step</label>
        <referenceTo>Installation_Step__c</referenceTo>
        <relationshipLabel>Market Installation Steps</relationshipLabel>
        <relationshipName>Market_Installation_Steps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market Installation Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CT</fullName>
        <columns>Sequence__c</columns>
        <columns>Installation_Step__c</columns>
        <columns>Display_In_Tracker__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Market__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <label>CT</label>
    </listViews>
    <listViews>
        <fullName>LA</fullName>
        <columns>Sequence__c</columns>
        <columns>Installation_Step__c</columns>
        <columns>Display_In_Tracker__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Market__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <label>LA</label>
    </listViews>
    <listViews>
        <fullName>NY</fullName>
        <columns>Sequence__c</columns>
        <columns>Installation_Step__c</columns>
        <columns>Display_In_Tracker__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Market__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <label>NY</label>
    </listViews>
    <nameField>
        <displayFormat>MIS-{0000000}</displayFormat>
        <label>Market Installation Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Installation Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>